# be-streaming-rust-actix-web

./: .dockerignore  .env.example  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs  server.rs  video.rs
src/actors/: chat.rs  room.rs  video.rs
src/handlers/: chat_handler.rs  mod.rs  stream_handler.rs  video_handler.rs
src/routes/: video_stream.rs
src/types/: conn_id.rs  mod.rs  msg.rs  room_id.rs
src/utils/: adaptive_bitrate.rs  mod.rs
