[package]
name = "be-meeturbate"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-ws = "0.3"
tokio = { version = "1.40", features = ["rt", "time", "macros"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
rand = "0.8.4"

[dev-dependencies]
tokio-test = "0.4"  # For testing async code